--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -792,10 +792,12 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
-            <div class="footer__top__logo header__logo">
-              <img src="/firstProject/images/Logo.svg" alt="logo" />
-              <nav class="logo-eatly header__logo-text">eatly</nav>
-            </div>
+            <a href="index.html" class="header__link">
+              <div class="footer__top__logo header__logo">
+                <img src="/firstProject/images/Logo.svg" alt="logo" />
+                <nav class="logo-eatly header__logo-text">eatly</nav>
+              </div>
+            </a>
             <nav class="footer__top__navigation">
               <ul class="footer__top-buttons">
                 <a href="#" class="header__link"><li>Blog</li></a
