--- a/firstProject/menu.html
+++ b/firstProject/menu.html
@@ -49,5 +49,374 @@
         </div>
       </div>
     </header>
+
+    <section class="weekend">
+      <div class="container">
+        <div class="weekend__wrapper">
+          <div class="weekend__inner">
+            <div class="weekend__left">
+              <div class="weekend__content">
+                <span class="weekend__content-text">50% OFF</span>
+                <span class="weekend__content-grey">WEEKEND</span>
+                <img
+                  class="weekend__content-img"
+                  src="/firstProject/images/Food Image2.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+
+            <div class="weekend__right">
+              <div class="weekend__category">
+                <span class="weekend__category-text">Category</span>
+                <div class="weekend__category-list">
+                  <div class="weekend__category-item pizza">
+                    <img src="/firstProject/menu images/Pizza.png" alt="" />
+                    <span class="weekend__category-name">Pizza</span>
+                  </div>
+
+                  <div class="weekend__category-item asian">
+                    <img src="/firstProject/menu images/Hotdog.png" alt="" />
+                    <span class="weekend__category-name">Asian</span>
+                  </div>
+
+                  <div class="weekend__category-item donut">
+                    <img src="/firstProject/menu images/Doughnut.png" alt="" />
+                    <span class="weekend__category-name">Donut</span>
+                  </div>
+
+                  <div class="weekend__category-item ice">
+                    <img src="/firstProject/menu images/Icecream.png" alt="" />
+                    <span class="weekend__category-name">Ice</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="weekend__price">
+                <span class="weekend__price-text">Price</span>
+                <div class="weekend__form">
+                  <img
+                    src="/firstProject/menu images/slider.png"
+                    alt="slider"
+                  />
+                </div>
+
+                <ul class="weekend__price-options">
+                  <li>$0</li>
+                  <li>$25</li>
+                  <li>$50</li>
+                  <li>$100</li>
+                  <li>$500</li>
+                  <li>$1000</li>
+                </ul>
+              </div>
+              <button class="weekend__price-button purpleButton">Apply</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="restaurants">
+      <div class="container">
+        <div class="restaurants__header">
+          <span class="restaurants__header-top"
+            >Our Top <purple>Restaurants</purple></span
+          >
+        </div>
+
+        <div class="restaurants__list">
+          <div class="restaurants__list-item">
+            <img
+              src="/firstProject/images/Resturent Image.jpg"
+              alt="chickenKing"
+            />
+
+            <div class="restaurants__list-information">
+              <span class="restaurants__list-highlight healthy">Healthy</span>
+              <span class="restaurants__list-name">The Chicken King</span>
+
+              <div class="restaurants__list-details">
+                <span class="restaurants__list-time">24min •</span>
+                <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                <span class="restaurants__list-rating">4.8</span>
+                <button class="restaurants__list-favorite-button favorite">
+                  <img
+                    src="/firstProject/images/Bookmark.svg"
+                    alt="favorite button"
+                  />
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="restaurants__list-item">
+            <img src="/firstProject/images/burgerKing.jpg" alt="burgerKing" />
+            <div class="restaurants__list-information">
+              <span class="restaurants__list-highlight trending">Trending</span>
+              <span class="restaurants__list-name">The Burger King</span>
+
+              <div class="restaurants__list-details">
+                <span class="restaurants__list-time">24min •</span>
+                <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                <span class="restaurants__list-rating">4.9</span>
+                <button class="restaurants__list-favorite-button favorite">
+                  <img
+                    src="/firstProject/images/Bookmark.svg"
+                    alt="favorite button"
+                  />
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="restaurants__list-item">
+            <img
+              src="/firstProject/images/Resturent Image.jpg"
+              alt="chickenKing"
+            />
+            <div class="restaurants__list-information">
+              <span class="restaurants__list-highlight healthy">Healthy</span>
+              <span class="restaurants__list-name">The Chicken King</span>
+
+              <div class="restaurants__list-details">
+                <span class="restaurants__list-time">24min •</span>
+                <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                <span class="restaurants__list-rating">4.8</span>
+                <button class="restaurants__list-favorite-button favorite">
+                  <img
+                    src="/firstProject/images/Bookmark.svg"
+                    alt="favorite button"
+                  />
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="restaurants__bottom">
+          <a href="#">
+            <span class="restaurants__bottom-text"> View All -> </span>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section class="dishes">
+      <div class="container">
+        <div class="dishes__wrapper">
+          <div class="dishes__header">
+            <span class="dishes__title">Our Top <purple>Dishes</purple></span>
+          </div>
+          <div class="dishes__main">
+            <div class="dishes__main-item">
+              <img src="/firstProject/images/Food Image1.svg" alt="" />
+
+              <div class="dishes__main-item-information">
+                <span class="dishes__main-highlight highlight healthy"
+                  >Healthy</span
+                >
+                <span class="dishes__main-item-name">Chicken Hell</span>
+                <div class="dishes__details">
+                  <span class="dishes__details-time">24min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes__details-rating">4.8</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$12.99</span>
+                  <button class="dishes-add-button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="dishes__main-item">
+              <img src="/firstProject/images/Food Image2.svg" alt="" />
+
+              <div class="dishes__main-item-information">
+                <span class="dishes__main-highlight highlight trending"
+                  >Trending</span
+                >
+                <span class="dishes__main-item-name">Swe Dish</span>
+                <div class="dishes__details">
+                  <span class="dishes__details-time">34min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes__details-rating">4.9</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$19.99</span>
+                  <button class="dishes-add-button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="dishes__main-item">
+              <img src="/firstProject/images/Food Image3.svg" alt="" />
+
+              <div class="dishes__main-item-information">
+                <span class="dishes__main-highlight highlight supreme"
+                  >Supreme</span
+                >
+                <span class="dishes__main-item-name">Fish Hell Veg</span>
+                <div class="dishes__details">
+                  <span class="dishes__details-time">34min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes__details-rating">4.9</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$19.99</span>
+                  <button class="dishes-add-button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="dishes__main-item">
+              <img src="/firstProject/images/Food Image1.svg" alt="" />
+
+              <div class="dishes__main-item-information">
+                <span class="dishes__main-highlight highlight healthy"
+                  >Healthy</span
+                >
+                <span class="dishes__main-item-name">Chicken Hell</span>
+                <div class="dishes__details">
+                  <span class="dishes__details-time">24min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes__details-rating">4.8</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$12.99</span>
+                  <button class="dishes-add-button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="dishes__main-item">
+              <img src="/firstProject/images/Food Image2.svg" alt="" />
+
+              <div class="dishes__main-item-information">
+                <span class="dishes__main-highlight highlight trending"
+                  >Trending</span
+                >
+                <span class="dishes__main-item-name">Swe Dish</span>
+                <div class="dishes__details">
+                  <span class="dishes__details-time">34min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes__details-rating">4.9</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$19.99</span>
+                  <button class="dishes-add-button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="dishes__bottom">
+            <a href="#">
+              <span class="dishes__bottom-text"> View All -> </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="questions">
+      <div class="container">
+        <div class="questions__wrapper">
+          <div class="questions__title">
+            <span class="questions__title-text">
+              Frequently Asked <purple>Questions</purple>
+            </span>
+          </div>
+
+          <div class="questions__content">
+            <ul class="questions__list">
+              <li class="questions__list-item">
+                How long does delivery take?
+
+                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+              </li>
+
+              <li class="questions__list-item">
+                How Does It Work ?
+
+                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+              </li>
+
+              <li class="questions__list-item">
+                How does your food delivery service work?
+
+                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+              </li>
+
+              <li class="questions__list-item">
+                What payment options do you accept?
+
+                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+              </li>
+
+              <li class="questions__list-item">
+                Do you offer discounts or promotions?
+
+                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__top">
+            <a href="index.html" class="header__link">
+              <div class="footer__top__logo header__logo">
+                <img src="/firstProject/images/Logo.svg" alt="logo" />
+                <nav class="logo-eatly header__logo-text">eatly</nav>
+              </div>
+            </a>
+            <nav class="footer__top__navigation">
+              <ul class="footer__top-buttons">
+                <a href="#" class="header__link"><li>Blog</li></a
+                ><a href="#" class="header__link"><li>Pricing</li></a
+                ><a href="#" class="header__link"
+                  ><li></li>
+                  About Us</a
+                ><a href="#" class="header__link"
+                  ><li></li>
+                  Contacts</a
+                >
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__bot">
+            <span class="footer__bot-copyright"
+              >© 2023 EATLY All Rights Reserved.</span
+            >
+            <nav class="footer__bot__navigation">
+              <ul class="footer__bot-buttons">
+                <a href="#" class="footer__link">
+                  <img src="/firstProject/images/inst logo.svg" alt="" /></a
+                ><a href="#" class="footer__link">
+                  <img src="/firstProject/images/in logo.svg" alt="" /></a
+                ><a href="#" class="footer__link">
+                  <img src="/firstProject/images/facebook logo.svg" alt="" /></a
+                ><a href="#" class="footer__link">
+                  <img src="/firstProject/images/twitter logo.svg" alt="" />
+                </a>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
