--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -29,7 +29,7 @@
                   <li>Menu</li>
                 </a>
 
-                <a href="#" class="header__link">
+                <a href="blog.html" class="header__link">
                   <li>Blog</li>
                 </a>
 
@@ -800,7 +800,7 @@
             </a>
             <nav class="footer__top__navigation">
               <ul class="footer__top-buttons">
-                <a href="#" class="header__link"><li>Blog</li></a
+                <a href="blog.html" class="header__link"><li>Blog</li></a
                 ><a href="#" class="header__link"><li>Pricing</li></a
                 ><a href="#" class="header__link"
                   ><li></li>
