--- a/firstProject/menu.html
+++ b/firstProject/menu.html
@@ -28,7 +28,7 @@
                   <li>Menu</li>
                 </a>
 
-                <a href="#" class="header__link">
+                <a href="blog.html" class="header__link">
                   <li>Blog</li>
                 </a>
 
@@ -338,35 +338,70 @@
 
           <div class="questions__content">
             <ul class="questions__list">
-              <li class="questions__list-item">
-                How long does delivery take?
+              <div class="questions__list-wrapper">
+                <li class="questions__list-item">
+                  How long does delivery take?
 
-                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
-              </li>
+                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                </li>
+                <span class="questions__list-hiddentext"
+                  >You Can Get Information By Contacting Our Support Team Have
+                  24/7 Service. What’s The Difference Between Free And Paid Plan
+                  ?</span
+                >
+              </div>
 
-              <li class="questions__list-item">
-                How Does It Work ?
+              <div class="questions__list-wrapper">
+                <li class="questions__list-item">
+                  How Does It Work ?
 
-                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
-              </li>
+                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                </li>
+                <span class="questions__list-hiddentext"
+                  >You Can Get Information By Contacting Our Support Team Have
+                  24/7 Service. What’s The Difference Between Free And Paid Plan
+                  ?</span
+                >
+              </div>
 
-              <li class="questions__list-item">
-                How does your food delivery service work?
+              <div class="questions__list-wrapper">
+                <li class="questions__list-item">
+                  How does your food delivery service work?
 
-                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
-              </li>
+                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                </li>
+                <span class="questions__list-hiddentext"
+                  >You Can Get Information By Contacting Our Support Team Have
+                  24/7 Service. What’s The Difference Between Free And Paid Plan
+                  ?</span
+                >
+              </div>
 
-              <li class="questions__list-item">
-                What payment options do you accept?
+              <div class="questions__list-wrapper">
+                <li class="questions__list-item">
+                  What payment options do you accept?
 
-                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
-              </li>
+                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                </li>
+                <span class="questions__list-hiddentext"
+                  >You Can Get Information By Contacting Our Support Team Have
+                  24/7 Service. What’s The Difference Between Free And Paid Plan
+                  ?</span
+                >
+              </div>
 
-              <li class="questions__list-item">
-                Do you offer discounts or promotions?
+              <div class="questions__list-wrapper">
+                <li class="questions__list-item">
+                  Do you offer discounts or promotions?
 
-                <img src="/firstProject/menu images/Plus.svg" alt="plus" />
-              </li>
+                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                </li>
+                <span class="questions__list-hiddentext"
+                  >You Can Get Information By Contacting Our Support Team Have
+                  24/7 Service. What’s The Difference Between Free And Paid Plan
+                  ?</span
+                >
+              </div>
             </ul>
           </div>
         </div>
@@ -385,7 +420,7 @@
             </a>
             <nav class="footer__top__navigation">
               <ul class="footer__top-buttons">
-                <a href="#" class="header__link"><li>Blog</li></a
+                <a href="blog.html" class="header__link"><li>Blog</li></a
                 ><a href="#" class="header__link"><li>Pricing</li></a
                 ><a href="#" class="header__link"
                   ><li></li>
