--- a/firstProject/blog.html
+++ b/firstProject/blog.html
@@ -6,10 +6,10 @@
     <title>Eatly</title>
     <link rel="stylesheet" href="/firstProject/css/reset.css" />
     <link rel="stylesheet" href="/firstProject/css/blog.css" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:wght@500;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
   </head>
   <body>
     <header>
@@ -42,8 +42,12 @@
               </ul>
             </nav>
             <div class="header__registration">
-              <button class="whiteButton">Login</button>
-              <button class="purpleButton">Sign Up</button>
+              <a href="login.html" class="header__registration-link">
+                <button class="whiteButton">Login</button>
+              </a>
+              <a href="signup.html" class="header__registration-link">
+                <button class="purpleButton">Sign Up</button>
+              </a>
             </div>
           </div>
         </div>
