--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -6,10 +6,10 @@
     <title>Eatly</title>
     <link rel="stylesheet" href="/firstProject/css/reset.css" />
     <link rel="stylesheet" href="/firstProject/css/style.css" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:wght@500;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
   </head>
 
   <body>
@@ -43,8 +43,12 @@
               </ul>
             </nav>
             <div class="header__registration">
-              <button class="whiteButton">Login</button>
-              <button class="purpleButton">Sign Up</button>
+              <a href="login.html" class="header__registration-link">
+                <button class="whiteButton">Login</button>
+              </a>
+              <a href="signup.html" class="header__registration-link">
+                <button class="purpleButton">Sign Up</button>
+              </a>
             </div>
           </div>
         </div>
@@ -701,9 +705,7 @@
                     />
                     <div class="item__header-text">
                       <span class="item__header-title">Alexander R.</span>
-                      <span class="item__header-subtitle"
-                        >01 Year With Us
-                      </span>
+                      <span class="item__header-subtitle">01 Year With </span>
                     </div>
                     <img
                       class="item__header-quote"
