sign in and sign up pages ended. js code started

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -162,7 +162,7 @@
               </li>
             </ul>
             <div class="mobile__right-more">
-              <button class="more_button purpleButton">Download -></button>
+              <button class="more_button purpleButton">Download →</button>
               <img
                 src="/firstProject/images/Vector 14.svg"
                 alt="vectorArrow"
@@ -201,6 +201,7 @@
                   <img
                     src="/firstProject/images/Bookmark.svg"
                     alt="favorite button"
+                    id="favoriteButton"
                   />
                 </button>
               </div>
@@ -221,6 +222,7 @@
                   <img
                     src="/firstProject/images/Bookmark.svg"
                     alt="favorite button"
+                    id="favoriteButton"
                   />
                 </button>
               </div>
@@ -244,6 +246,7 @@
                   <img
                     src="/firstProject/images/Bookmark.svg"
                     alt="favorite button"
+                    id="favoriteButton"
                   />
                 </button>
               </div>
@@ -836,4 +839,6 @@
       </div>
     </footer>
   </body>
+
+  <script src="script.js"></script>
 </html>
