--- a/firstProject/login.html
+++ b/firstProject/login.html
@@ -37,7 +37,7 @@
         <div class="left">
           <div class="left__wrapper">
             <div class="left__title">
-              <span class="left__title-text">Sign Up To eatly</span>
+              <span class="left__title-text">Sign In To eatly</span>
             </div>
 
             <div class="left__socials">
@@ -54,21 +54,6 @@
             </div>
 
             <div class="left__fields">
-              <div class="left__name">
-                <input
-                  type="text"
-                  placeholder="Full Name"
-                  name="fullname"
-                  id="fullname"
-                />
-
-                <img
-                  src="/firstProject/signup images/fullname.png"
-                  alt="namePic"
-                  id="namePic"
-                />
-              </div>
-
               <div class="left__email">
                 <input
                   type="text"
@@ -110,13 +95,13 @@
             </div>
 
             <div class="left__signup">
-              <button class="left__signup-button purpleButton">SIGN UP</button>
+              <button class="left__signup-button purpleButton">SIGN IN</button>
             </div>
 
             <div class="left__text">
               <span class="left__text"
-                >Already Have An Account?
-                <a href="login.html"><purple>Log In</purple></a></span
+                >Create A New Account?
+                <a href="signup.html"><purple>Sign Up</purple></a></span
               >
             </div>
 
