favorite button notification added

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -838,7 +838,13 @@
         </div>
       </div>
     </footer>
+
+    <div class="notification">
+      <div class="notification-content">
+        <h3>You have added a restaurant to your favorite</h3>
+      </div>
+    </div>
   </body>
 
-  <script src="script.js"></script>
+  <script src="favorite notification.js"></script>
 </html>
