--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -447,11 +447,25 @@
               <div class="purchase__right-information">
                 <div class="purchase__right-header">
                   <span class="purchase__right-title">Purchases</span>
-                  <select class="purchase__right-select" name="date" id="">
+
+                  <div class="purchase__right-dropdown dropdown">
+                    <div class="purchase__right-select">
+                      <span class="purchase__right-selected">Week</span>
+                      <div class="purchase__right-caret"></div>
+                    </div>
+                    <ul class="purchase__right-menu">
+                      <li class="purchase__right-active">Week</li>
+                      <li>Month</li>
+                      <li>6 Months</li>
+                      <li>Year</li>
+                      <li>2 Years</li>
+                    </ul>
+                  </div>
+                  <!-- <select class="purchase__right-select" name="date" id="">
                     <option value="1">Week</option>
                     <option value="2">Month</option>
                     <option value="3">Year</option>
-                  </select>
+                  </select> -->
                 </div>
                 <div class="purchase__right-main">
                   <div class="purchase__item-wrapper">
@@ -848,4 +862,5 @@
 
   <script src="favorite notification.js"></script>
   <script src="slider.js"></script>
+  <script src="dropDown.js"></script>
 </html>
