file system and dropdown menu fixed

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -450,15 +450,15 @@
 
                   <div class="purchase__right-dropdown dropdown">
                     <div class="purchase__right-select">
-                      <span class="purchase__right-selected">Week</span>
+                      <span class="purchase__right-selected">2 Year</span>
                       <div class="purchase__right-caret"></div>
                     </div>
                     <ul class="purchase__right-menu">
-                      <li class="purchase__right-active">Week</li>
+                      <li>Week</li>
                       <li>Month</li>
                       <li>6 Months</li>
                       <li>Year</li>
-                      <li>2 Years</li>
+                      <li class="purchase__right-active">2 Years</li>
                     </ul>
                   </div>
                 </div>
@@ -476,7 +476,7 @@
                         >
                       </div>
                       <div class="purchase__item-price">
-                        <span class="purchase__item-price-text">$409.00</span>
+                        <span class="purchase__item-price-text">$4090.00</span>
                       </div>
                     </div>
                     <div id="purple_form">
@@ -855,7 +855,7 @@
     </div>
   </body>
 
-  <script src="favorite notification.js"></script>
-  <script src="slider.js"></script>
-  <script src="dropDown.js"></script>
+  <script src="/firstProject/indexJS/favorite notification.js"></script>
+  <script src="/firstProject/indexJS/slider.js"></script>
+  <script src="/firstProject/indexJS/dropDown.js"></script>
 </html>
