--- a/firstProject/blog.html
+++ b/firstProject/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eatly</title>
     <link rel="stylesheet" href="/firstProject/css/reset.css" />
-    <link rel="stylesheet" href="/firstProject/css/blog.css" />
+    <link rel="stylesheet" href="/firstProject/css/blog/blog.css" />
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:wght@500;700&display=swap"
       rel="stylesheet"
