--- a/firstProject/menu.html
+++ b/firstProject/menu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eatly</title>
     <link rel="stylesheet" href="/firstProject/css/reset.css" />
-    <link rel="stylesheet" href="/firstProject/css/menu.css" />
+    <link rel="stylesheet" href="/firstProject/css/menu/menu.css" />
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:wght@500;700&display=swap"
       rel="stylesheet"
@@ -101,6 +101,7 @@
                 <div class="weekend__form">
                   <img
                     src="/firstProject/menu images/slider.png"
+                    id="slider"
                     alt="slider"
                   />
                 </div>
@@ -458,4 +459,5 @@
       </div>
     </footer>
   </body>
+  <script src="/firstProject/menuJS/slider.js"></script>
 </html>
