--- a/firstProject/menu.html
+++ b/firstProject/menu.html
@@ -347,7 +347,11 @@
                 <li class="questions__list-item">
                   How long does delivery take?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -360,7 +364,11 @@
                 <li class="questions__list-item">
                   How Does It Work ?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -373,7 +381,11 @@
                 <li class="questions__list-item">
                   How does your food delivery service work?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -386,7 +398,11 @@
                 <li class="questions__list-item">
                   What payment options do you accept?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -399,7 +415,11 @@
                 <li class="questions__list-item">
                   Do you offer discounts or promotions?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -458,6 +478,14 @@
         </div>
       </div>
     </footer>
+
+    <div class="notification">
+      <div class="notification-content">
+        <h3>You have added a restaurant to your favorite</h3>
+      </div>
+    </div>
   </body>
   <script src="/firstProject/menuJS/slider.js"></script>
+  <script src="/firstProject/menuJS/dropdown.js"></script>
+  <script src="/firstProject/menuJS/favorite notification.js"></script>
 </html>
