--- a/firstProject/blog.html
+++ b/firstProject/blog.html
@@ -180,8 +180,8 @@
           </div>
 
           <div class="articles__bottom">
-            <p>←</p>
-            <p>→</p>
+            <p id="leftArrow">←</p>
+            <p id="rightArrow">→</p>
           </div>
         </div>
       </div>
@@ -202,7 +202,11 @@
                 <li class="questions__list-item">
                   How long does delivery take?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -215,7 +219,11 @@
                 <li class="questions__list-item">
                   How Does It Work ?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -228,7 +236,11 @@
                 <li class="questions__list-item">
                   How does your food delivery service work?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -241,7 +253,11 @@
                 <li class="questions__list-item">
                   What payment options do you accept?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -254,7 +270,11 @@
                 <li class="questions__list-item">
                   Do you offer discounts or promotions?
 
-                  <img src="/firstProject/menu images/Plus.svg" alt="plus" />
+                  <img
+                    src="/firstProject/menu images/Plus.svg"
+                    alt="plus"
+                    id="plus"
+                  />
                 </li>
                 <span class="questions__list-hiddentext"
                   >You Can Get Information By Contacting Our Support Team Have
@@ -314,4 +334,6 @@
       </div>
     </footer>
   </body>
+  <script src="/firstProject/blogJS/gallery.js"></script>
+  <script src="/firstProject/blogJS/dropdown.js"></script>
 </html>
