login and signup pages ended

--- a/firstProject/login.html
+++ b/firstProject/login.html
@@ -37,7 +37,9 @@
         <div class="left">
           <div class="left__wrapper">
             <div class="left__title">
-              <span class="left__title-text">Sign In To eatly</span>
+              <span class="left__title-text"
+                >Sign In To <a href="index.html">eatly</a></span
+              >
             </div>
 
             <div class="left__socials">
@@ -85,6 +87,7 @@
                   src="/firstProject/signup images/icons8-показать-20.png"
                   alt=""
                   id="passwordShow"
+                  class="hide"
                 />
                 <img
                   src="/firstProject/signup images/icons8-спрятать-20.png"
@@ -155,4 +158,5 @@
       </div>
     </section>
   </body>
+  <script src="/firstProject/loginJS/password hider.js"></script>
 </body>
