--- a/firstProject/signup.html
+++ b/firstProject/signup.html
@@ -37,7 +37,9 @@
         <div class="left">
           <div class="left__wrapper">
             <div class="left__title">
-              <span class="left__title-text">Sign Up To eatly</span>
+              <span class="left__title-text"
+                >Sign Up To <a href="index.html">eatly</a></span
+              >
             </div>
 
             <div class="left__socials">
@@ -100,6 +102,7 @@
                   src="/firstProject/signup images/icons8-показать-20.png"
                   alt=""
                   id="passwordShow"
+                  class="hide"
                 />
                 <img
                   src="/firstProject/signup images/icons8-спрятать-20.png"
@@ -170,4 +173,5 @@
       </div>
     </section>
   </body>
+  <script src="/firstProject/signupJS/password hider.js"></script>
 </body>
