adaptive started and some fixes

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <header>
+    <!-- <header>
       <div class="header">
         <div class="container">
           <div class="header__inner">
@@ -53,9 +53,9 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
 
-    <section class="application">
+    <!-- <section class="application">
       <div class="container">
         <div class="application__inner">
           <div class="application__left">
@@ -116,9 +116,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="features">
+    <!-- <section class="features">
       <div class="features__box">
         <div class="features__item">
           <h1 class="features__item-title">10K+</h1>
@@ -139,7 +139,7 @@
           >
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="mobile">
       <div class="container">
@@ -174,7 +174,7 @@
       </div>
     </section>
 
-    <section class="restaurants">
+    <!-- <section class="restaurants">
       <div class="container">
         <div class="restaurants__header">
           <span class="restaurants__header-top"
@@ -259,9 +259,9 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="dishes">
+    <!-- <section class="dishes">
       <div class="container">
         <div class="dishes__wrapper">
           <div class="dishes__header">
@@ -385,9 +385,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="purchase">
+    <!-- <section class="purchase">
       <div class="container">
         <div class="purchase__wrapper">
           <div class="purchase__inner">
@@ -510,9 +510,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="customer">
+    <!-- <section class="customer">
       <div class="container">
         <div class="customer__wrapper">
           <div class="customer__inner">
@@ -779,9 +779,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="subscribe">
+    <!-- <section class="subscribe">
       <div class="container">
         <div class="subscribe__inner">
           <div class="subscribe__content">
@@ -800,9 +800,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
@@ -846,13 +846,13 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
-    <div class="notification">
+    <!-- <div class="notification">
       <div class="notification-content">
         <h3>You have added a restaurant to your favorite</h3>
       </div>
-    </div>
+    </div> -->
   </body>
 
   <script src="/firstProject/indexJS/favorite notification.js"></script>
