few section has adapted

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -141,7 +141,7 @@
       </div>
     </section> -->
 
-    <section class="mobile">
+    <!-- <section class="mobile">
       <div class="container">
         <div class="mobile__inner">
           <div class="mobile__left">
@@ -162,7 +162,9 @@
               </li>
             </ul>
             <div class="mobile__right-more">
-              <button class="more_button purpleButton">Download →</button>
+              <button class="mobile__right-more-button purpleButton">
+                Download →
+              </button>
               <img
                 src="/firstProject/images/Vector 14.svg"
                 alt="vectorArrow"
@@ -172,7 +174,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- <section class="restaurants">
       <div class="container">
@@ -387,7 +389,7 @@
       </div>
     </section> -->
 
-    <!-- <section class="purchase">
+    <section class="purchase">
       <div class="container">
         <div class="purchase__wrapper">
           <div class="purchase__inner">
@@ -510,7 +512,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class="customer">
       <div class="container">
