slider fixed and sections adapted

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -389,7 +389,7 @@
       </div>
     </section> -->
 
-    <section class="purchase">
+    <!-- <section class="purchase">
       <div class="container">
         <div class="purchase__wrapper">
           <div class="purchase__inner">
@@ -512,9 +512,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <!-- <section class="customer">
+    <section class="customer">
       <div class="container">
         <div class="customer__wrapper">
           <div class="customer__inner">
@@ -781,7 +781,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class="subscribe">
       <div class="container">
