--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -514,7 +514,7 @@
       </div>
     </section> -->
 
-    <section class="customer">
+    <!-- <section class="customer">
       <div class="container">
         <div class="customer__wrapper">
           <div class="customer__inner">
@@ -781,9 +781,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <!-- <section class="subscribe">
+    <section class="subscribe">
       <div class="container">
         <div class="subscribe__inner">
           <div class="subscribe__content">
@@ -802,7 +802,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <footer class="footer">
       <div class="container">
