--- a/firstProject/blog.html
+++ b/firstProject/blog.html
@@ -12,7 +12,7 @@
     /> -->
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="header">
         <div class="container">
           <div class="header__inner">
@@ -52,9 +52,9 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
 
-    <section class="subscribe">
+    <!-- <section class="subscribe">
       <div class="container">
         <div class="subscribe__inner">
           <div class="subscribe__content">
@@ -73,7 +73,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="articles">
       <div class="container">
@@ -187,7 +187,7 @@
       </div>
     </section>
 
-    <section class="questions">
+    <!-- <section class="questions">
       <div class="container">
         <div class="questions__wrapper">
           <div class="questions__title">
@@ -286,9 +286,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
@@ -332,7 +332,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
   <script src="/firstProject/blogJS/gallery.js"></script>
   <script src="/firstProject/blogJS/dropdown.js"></script>
