--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -783,7 +783,7 @@
       </div>
     </section> -->
 
-    <section class="subscribe">
+    <!-- <section class="subscribe">
       <div class="container">
         <div class="subscribe__inner">
           <div class="subscribe__content">
@@ -802,7 +802,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- <footer class="footer">
       <div class="container">
