--- a/firstProject/menu.html
+++ b/firstProject/menu.html
@@ -12,7 +12,7 @@
     /> -->
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="header">
         <div class="container">
           <div class="header__inner">
@@ -52,9 +52,9 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
 
-    <section class="weekend">
+    <!-- <section class="weekend">
       <div class="container">
         <div class="weekend__wrapper">
           <div class="weekend__inner">
@@ -120,9 +120,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="restaurants">
+    <!-- <section class="restaurants">
       <div class="container">
         <div class="restaurants__header">
           <span class="restaurants__header-top"
@@ -204,9 +204,9 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="dishes">
+    <!-- <section class="dishes">
       <div class="container">
         <div class="dishes__wrapper">
           <div class="dishes__header">
@@ -330,9 +330,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="questions">
+    <!-- <section class="questions">
       <div class="container">
         <div class="questions__wrapper">
           <div class="questions__title">
@@ -431,9 +431,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
@@ -477,7 +477,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="notification">
       <div class="notification-content">
