--- a/firstProject/blog.html
+++ b/firstProject/blog.html
@@ -75,7 +75,7 @@
       </div>
     </section> -->
 
-    <section class="articles">
+    <!-- <section class="articles">
       <div class="container">
         <div class="articles__wrapper">
           <div class="articles__head">
@@ -185,7 +185,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- <section class="questions">
       <div class="container">
